--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "graphql-parser"
+name = "edb-graphql-parser"
 description = """
     A parser, AST and serializer for graphql query language and scheme
     definition language (sometimes called IDL).
@@ -17,6 +17,8 @@ edition = "2018"
 [dependencies]
 combine = "3.2.0"
 thiserror = "1.0.11"
+num-bigint = "0.2.6"
+num-traits = "0.2.11"
 
 [dev-dependencies]
 pretty_assertions = "0.5.0"
